k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: chatbot-namespace
  name: chatbot
  labels:
    app: chatbot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
      - name: chatbot
        image: 123456789012.dkr.ecr.us-east-1.amazonaws.com/chatbot:latest
        ports:
        - containerPort: 5000
