k8s-manifest/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: chatbot-namespace
  name: chtbot-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: chatbot-service
              port:
                number: 80
        - path: /data
          pathType: Prefix
          backend:
            service:
              name: chatbot-service
              port:
                number: 80
